src/objects/Gumutindo_Primary_Society__c.object
<CustomObject>
    <description>Gumutindo Primary Society</description>
    <fields>
        <fullName>Adhere_to_Established_Policies__c</fullName>
        <label>Adhere to Established Policies</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farmers_Procure_Farm_Inputs_Collectively__c</fullName>
        <label>Farmers Procure Farm Inputs Collectively</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <label>GPS Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_PS__c</fullName>
        <label>Name of PS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_for_Inputs_Upon_Delivery__c</fullName>
        <label>Pay for Inputs Upon Delivery</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <description>Sub county</description>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>Gumutindo Primary Societies</relationshipLabel>
        <relationshipName>Gumutindo_Primary_Societies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year_of_Joining__c</fullName>
        <label>Year of Joining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gumutindo Primary Society</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gumutindo Primary Society Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gumutindo Primary Societies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>